# ANALYSIS_NBS

./: .dockerignore  .gitignore  Analisis_BIOCAM_NBS_PARES_1.xlsx  CONVERTER.PY  Dockerfile  LEEME.md  NBS_BIOCAM_PARES_analysis_ready_20260113_105051.xlsx  NBS_analysis_ready_20260113_102540.xlsx  README.md  app.py  docker-compose.yaml  docs  requirements.txt  tierra_viva_analisis_nbs.xlsx  tv_nbs_analysis_ready.xlsx
.streamlit/: config.toml
nbs_analyzer/: README.md  pyproject.toml
nbs_analyzer/config/: beneficiary_keywords.yml  column_mappings.yml  enabling_packages.yml
nbs_analyzer/src/nbs_analyzer/: __init__.py  cli.py  io.py  metrics.py  report.py  schema.py  storyline_a.py  storyline_b.py  storyline_c.py  utils.py  validate.py
nbs_analyzer/templates/: report_storyline_a.html.j2  report_storyline_b.html.j2  report_storyline_c.html.j2
nbs_analyzer/tests/: test_smoke.py  test_storyline_b_smoke.py  test_storyline_c_smoke.py
pages/: 1_📁_Converter.py  2_📊_Analyzer.py
test_outputs/reports/: report_storyline_a.html
test_outputs/tables/: nbs_onepagers.xlsx
